making changes to allowed both services to run off one port for heroku.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "name": "kanshu-backend",
-  "version": "0.0.1",
-  "main": "./dictionary/index.js"
+  "version": "0.0.2",
+  "main": "index.js"
 }
