--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/dsandor/kanshu-backend.git"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
