--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "connectionString": "postgres://localhost/kanshu",
+  "DATABASE_URL": "postgres://localhost/kanshu",
   "apiServicePort": 23001,
   "initialSessionExpirationMinutes": 10080
 }
