Fixed issue with parsing. Added title parsing. Added title and link to results of parsing.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-uuid": "latest",
     "pg": "latest",
     "restify": "latest",
-    "typechecker": "latest"
+    "typechecker": "latest",
+    "html-to-text": "latest"
   },
   "repository": {
     "type": "git",
