--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "DATABASE_URL": "postgres://vztatczzgyhmiy:GFo0ahvkwEh71eNR-moO5Fj-Gr@ec2-54-204-45-65.compute-1.amazonaws.com:5432/d2eoma8t05r5v9?ssl=true",
+  "DATABASE_URL": "",
   "apiServicePort": 23001,
   "initialSessionExpirationMinutes": 10080,
   "scanFeedsForNewArticlesIntervalSeconds": 300
